# deviceaccess-DoocsBackend

./: .jenkinsfile  CMakeLists.txt
cmake/: Doxyfile.in  Doxyfile.in.in
cmake/Modules/: FindDOOCS.cmake
doc/: cache_file.md  mainpage.dox  spec_DoocsBackend.dox
include/: CatalogueCache.h  CatalogueFetcher.h  DoocsBackend.h  DoocsBackendEventIdAccessor.h  DoocsBackendFloatRegisterAccessor.h  DoocsBackendIFFFRegisterAccessor.h  DoocsBackendIIIIRegisterAccessor.h  DoocsBackendIntRegisterAccessor.h  DoocsBackendLongRegisterAccessor.h  DoocsBackendRegisterAccessor.h  DoocsBackendStringRegisterAccessor.h  DoocsBackendTimeStampAccessor.h  EventIdMapper.h  RegisterInfo.h  StringUtility.h  ZMQSubscriptionManager.h
src/: CatalogueCache.cc  CatalogueFetcher.cc  DoocsBackend.cc  EmptyDoocsFunctions.cc  EventIdMapper.cc  RegisterInfo.cc  StringUtility.cc  ZMQSubscriptionManager.cc
tests/: doocsDummy_rpc_server.conf  dummies.dmap
tests/DoocsDummyServer/: doocsDummy_rpc_server.cc  eq_dummy.cc  eq_dummy.h
tests/executables_src/: testCaching.cpp  testDoocsBackend.cpp  testUnifiedBackendTest.cpp  testZeroMQ.cpp
